test_scores/negative_dimers/features/Q7Z2K8.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q7Z2K8.pkl.xz